Switched to jQuery 2.2.3

--- a/css/main.css
+++ b/css/main.css
@@ -12,11 +12,15 @@ html, body {
 /*
 	Element styles
 */
-h1, p {
+h1, h2, p {
 	margin-bottom: 10px;
 }
 h1 {
 	font-size: 2em;
+	font-weight: bold;
+}
+h2 {
+	font-size: 1.5em;
 	font-weight: bold;
 }
 p {
@@ -28,6 +32,9 @@ button {
 /*
 	Class styles
 */
+.hidden {
+	display: none;
+}
 .panel {
 	margin: 10px;
 }
