Added settings and spectrum color picker plugin

--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,9 @@ p {
 button {
 	padding: 10px;
 }
+input[type=text] {
+	margin-bottom: 10px;
+}
 /*
 	Class styles
 */
@@ -38,9 +41,38 @@ button {
 .panel {
 	margin: 10px;
 }
+.setting {
+	float: left;
+	background-color: #CCC;
+	border: 1px solid #999;
+	margin-bottom: 10px;
+	padding: 10px;
+}
+.setting p:last-child {
+	margin-bottom: 0;
+}
+.setting input[type=radio], .setting input[type=checkbox] {
+	margin-bottom: 10px;
+}
+p.description {
+	font-size: 0.9em;
+}
+p.description.extra {
+	margin-top: 10px;
+}
 /*
-	Id styles
+	Id and specific styles
 */
-canvas {
+#app-canvas {
 	display:block;
+}
+/*
+	Clearfix
+*/
+.clearfix:after {
+	content: " "; /* space for older browsers */
+	visibility: hidden;
+	display: block;
+	height: 0;
+	clear: both;
 }
