--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ html, body {
 /*
 	Element styles
 */
-h1, h2, p {
+h1, p {
 	margin-bottom: 10px;
 }
 h1 {
@@ -20,8 +20,10 @@ h1 {
 	font-weight: bold;
 }
 h2 {
-	font-size: 1.5em;
+	display: inline;
+	font-size: 1em;
 	font-weight: bold;
+	margin-right: 10px;
 }
 p {
 	font-size: 1em;
